--- a/src/styles/ShoppingCartItem.module.scss
+++ b/src/styles/ShoppingCartItem.module.scss
@@ -7,10 +7,10 @@
 	margin-bottom: 24px;
 	align-items: center;
 }
-.ShoppingCartItem figure {
+.ShoppingCartItem button {
 	margin: 0;
 }
-.ShoppingCartItem figure img {
+.ShoppingCartItem button img {
 	width: 70px;
 	height: 70px;
 	border-radius: 20px;
