--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -5,7 +5,7 @@
 	justify-content: space-between;
 	padding: 0 24px;
 	border-bottom: 1px solid $--secundary-color;
-	position: absolute;
+	position: relative;
 	top: 0;
 	background: white;
 	width: calc(100% - 0px);
@@ -56,11 +56,15 @@
 	color: $--secundary-color;
 	font-size: $--sm;
 	margin-right: 12px;
+	background-color: white;
+	border: none;
 }
 .navbar-shopping-cart {
 	position: relative;
-
+	background-color: white;
+	border: none;
 }
+
 .navbar-shopping-cart div {
 	width: 16px;
 	height: 16px;
